refactor(user): redesign user and role domain with DTO pattern
- Rename and update entities: Rol -> Role, RolRepo -> RoleRepo
- Implement comprehensive DTO strategy in DTOs/User/ and DTOs/RoleDto.java
- Remove legacy DTOs (UserDto, UserRoleDto deprecated versions)
- Update UserService, RoleService, UserRoleService to use new architecture
- Refactor REST resources: UserResource, RoleResource

user #13 (Closes #4, #5, #6, #7, #8)