@@ -1,19 +1,17 @@
 package com.ElVikingoStore.Viking_App.Services;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
-import com.ElVikingoStore.Viking_App.DTOs.UserDto;
+import com.ElVikingoStore.Viking_App.DTOs.User.UserCreateRequestDto;
+import com.ElVikingoStore.Viking_App.DTOs.User.UserResponseDto;
+import com.ElVikingoStore.Viking_App.DTOs.User.UserUpdateRequestDto;
 import com.ElVikingoStore.Viking_App.Exception.UnauthorizedException;
 import com.ElVikingoStore.Viking_App.Models.Role;
 import com.ElVikingoStore.Viking_App.Models.UserRole;
 import com.ElVikingoStore.Viking_App.Repositories.RoleRepo;
-import com.ElVikingoStore.Viking_App.Repositories.RoleRepo;
 import com.ElVikingoStore.Viking_App.Repositories.UserRoleRepo;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Schema;
-import jakarta.persistence.EntityNotFoundException;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -24,6 +22,7 @@ import com.ElVikingoStore.Viking_App.Models.User;
 import com.ElVikingoStore.Viking_App.Repositories.UserRepo;
 
 import jakarta.transaction.Transactional;
+
 @Schema(name = "UserService", description = "Servicio para la gestión de usuarios")
 @Service
 public class UserService {
@@ -39,54 +38,61 @@ public class UserService {
 
     @Autowired
     private PasswordEncoder passwordEncoder;
+
     @Autowired
-    public void CustomUsersDetailsService (UserRepo userRepo) {
+    public void CustomUsersDetailsService(UserRepo userRepo) {
         this.userRepo = userRepo;
     }
 
     @Operation(summary = "Obtener todos los usuarios", description = "Obtiene una lista de todos los usuarios registrados en el sistema")
-    public ArrayList<User> getAllUsers(){
-        return (ArrayList<User>) userRepo.findAll();
+    public List<UserResponseDto> getAllUsers() {
+        return userRepo.findAll()
+                .stream()
+                .map(this::convertToResponse)
+                .toList();
     }
 
     @Operation(summary = "Obtener usuario por ID", description = "Obtiene un usuario por su ID")
-    public Optional<User> getUserById(UUID id) {
-        return userRepo.findById(id);
+    public UserResponseDto getUserById(UUID id) {
+        User user = getUserEntityById(id);
+        return convertToResponse(user);
     }
+
+    public User getUserEntityById(UUID id) {
+        return userRepo.findById(Objects.requireNonNull(id, "ID vacío"))
+                .orElseThrow(() -> new NoSuchElementException("User not found"));
+    }
+
     @Operation(summary = "Obtener usuario por su rolId", description = "Obtiene una lista de usuarios por su rolId")
-    public List<User> getUsersByRoleId(UUID rolId) {
-        List<UserRole> userRoles = userRoleRepo.findByRole_Id(rolId);
+    public List<UserResponseDto> getUsersByRoleId(UUID roleId) {
+
+        List<UserRole> userRoles = userRoleRepo.findByRole_Id(roleId);
 
         return userRoles.stream()
-                .map(userRole -> userRepo.findById(userRole.getUser().getId())
-                        .orElseThrow(() -> new EntityNotFoundException("User not found with ID: " + userRole.getUser().getId())))
-                .collect(Collectors.toList());
+                .map(userRole -> convertToResponse(userRole.getUser()))
+                .toList();
     }
 
-@Operation(summary = "Obtener usuario por DNI", description = "Obtiene un usuario por su DNI")
-public User getUserByDni(Integer dni) {
+    @Operation(summary = "Obtener usuario por DNI", description = "Obtiene un usuario por su DNI")
+    public User getUserByDni(Integer dni) {
         return userRepo.findByDni(dni)
                 .orElseThrow(() -> new NoSuchElementException("User not found with DNI: " + dni));
     }
+
     @Operation(summary = "Obtener usuario por email", description = "Obtiene un usuario por su email")
     public User getUserByEmail(String email) {
         return userRepo.findByEmail(email)
                 .orElseThrow(() -> new NoSuchElementException("User not found with email: " + email));
     }
-@Operation(summary = "Obtener usuario por CUIT", description = "Obtiene un usuario por su CUIT")
-public User getUserByCuit(String cuit) {
-        return userRepo.findByCuit(cuit)
-                .orElseThrow(() -> new NoSuchElementException("User not found with CUIT: " + cuit));
-    }
+
     @Operation(summary = "Guardar Instancia de Usuario", description = "Guarda un nuevo usuario en la base de datos")
     @Transactional
-    public String saveUserInstance(UserDto userDto) {
+    public String saveUserInstance(UserCreateRequestDto userDto) {
         Role role = validateRole(userDto.getRoleId());
 
         User user = new User();
         user.setName(userDto.getName());
         user.setDni(userDto.getDni());
-        user.setUserType(userDto.getUserType());
         user.setAddress(userDto.getAddress());
         user.setPhoneNumber(userDto.getPhoneNumber());
         user.setSecondaryPhoneNumber(userDto.getSecondaryPhoneNumber());
@@ -103,63 +109,54 @@ public User getUserByCuit(String cuit) {
         userRoleRepo.save(userRole);
         return "User created successfully";
     }
+
     @Operation(summary = "Actualizar usuario", description = "Actualiza un usuario existente en el sistema")
     @Transactional
-    public UserDto updateUser(UserDto userDto) {
-        User existingUser = userRepo.findById(userDto.getId())
+    public UserResponseDto updateUser(UserUpdateRequestDto request) {
+
+        User user = userRepo.findById(
+                Objects.requireNonNull(request.getId(), "ID vacío"))
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-        // Actualizar los campos del usuario
-        existingUser.setName(userDto.getName());
-        existingUser.setDni(userDto.getDni());
-        existingUser.setUserType(userDto.getUserType());
-        existingUser.setAddress(userDto.getAddress());
-        existingUser.setPhoneNumber(userDto.getPhoneNumber());
-        existingUser.setSecondaryPhoneNumber(userDto.getSecondaryPhoneNumber());
-        existingUser.setEmail(userDto.getEmail());
-        existingUser.setCuit(userDto.getCuit());
+        user.setName(request.getName());
+        user.setDni(request.getDni());
+        user.setAddress(request.getAddress());
+        user.setPhoneNumber(request.getPhoneNumber());
+        user.setSecondaryPhoneNumber(request.getSecondaryPhoneNumber());
+        user.setEmail(request.getEmail());
 
-        // Actualizar la contraseña si se proporciona una nueva
-        if (userDto.getPassword() != null && !userDto.getPassword().isEmpty()) {
-            existingUser.setPassword(encodePassword(userDto.getPassword()));
+        if (request.getPassword() != null && !request.getPassword().isBlank()) {
+            user.setPassword(passwordEncoder.encode(request.getPassword()));
         }
 
-        // Guardar los cambios del usuario
-        userRepo.save(existingUser);
+        if (request.getRoleId() != null) {
+            Role role = validateRole(request.getRoleId());
 
-        // Actualizar el rol si se proporciona un nuevo roleId
-        if (userDto.getRoleId() != null) {
-            Role newRole = validateRole(userDto.getRoleId());
+            UserRole userRole = userRoleRepo.findByUserId(user.getId())
+                    .orElseGet(() -> {
+                        UserRole newUserRole = new UserRole();
+                        newUserRole.setUser(user);
+                        return newUserRole;
+                    });
 
-            // Buscar el UserRole existente
-            Optional<UserRole> existingUserRoleOpt = userRoleRepo.findRoleIdByUserId(existingUser.getId());
-
-            if (existingUserRoleOpt.isPresent()) {
-                UserRole existingUserRole = existingUserRoleOpt.get();
-                existingUserRole.setRole(newRole);
-                userRoleRepo.save(existingUserRole);
-            } else {
-                // Si no existe un UserRole, creamos uno nuevo
-                UserRole newUserRole = new UserRole();
-                newUserRole.setUser(existingUser);
-                newUserRole.setRole(newRole);
-                userRoleRepo.save(newUserRole);
-            }
+            userRole.setRole(role);
+            userRoleRepo.save(userRole);
         }
 
-        return convertToDto(existingUser);
+        userRepo.save(user);
+
+        return convertToResponse(user);
     }
 
-@Operation(summary = "Encriptar Contraseña", description = "Encripta la contraseña del usuario en caso de necesitarse")
-private String encodePassword(String password) {
+    @Operation(summary = "Encriptar Contraseña", description = "Encripta la contraseña del usuario en caso de necesitarse")
+    private String encodePassword(String password) {
         return passwordEncoder.encode(password);
     }
 
-
-@Operation(summary = "Eliminar usuario", description = "Elimina un usuario del sistema")
-public boolean deleteUser(UUID id) {
+    @Operation(summary = "Eliminar usuario", description = "Elimina un usuario del sistema")
+    public boolean deleteUser(UUID id) {
         try {
-            Optional<User> optionalUser = userRepo.findById(id);
+            Optional<User> optionalUser = userRepo.findById(Objects.requireNonNull(id, "ID vacio"));
             if (optionalUser.isEmpty()) {
                 return false; // Usuario no encontrado
             }
@@ -170,48 +167,61 @@ public boolean deleteUser(UUID id) {
             return false; // Error al eliminar
         }
     }
+
     @Operation(summary = "Verificar si el usuario tiene un rol específico", description = "Verifica si un usuario tiene un rol específico")
     public boolean hasRoleId(String email, UUID roleId) {
         Optional<User> userOptional = userRepo.findByEmail(email);
         if (userOptional.isPresent()) {
             User user = userOptional.get();
             // Buscar si el usuario tiene el rol especificado
-            Optional<UserRole> userRole = userRoleRepo.findRoleIdByUserId(user.getId());
+            Optional<UserRole> userRole = userRoleRepo.findByUserId(user.getId());
             return userRole.isPresent() && userRole.get().getRoleId().equals(roleId);
         }
         return false;
     }
-@Operation(summary = "Validar Rol", description = "Valida la existencia de un rol en la base de datos")
-private Role validateRole(UUID roleId) {
-        return roleRepo.findById(roleId)
+
+    @Operation(summary = "Validar Rol", description = "Valida la existencia de un rol en la base de datos")
+    private Role validateRole(UUID roleId) {
+        return roleRepo.findById(Objects.requireNonNull(roleId, "ID vacio"))
                 .orElseThrow(() -> new IllegalArgumentException("Rol no encontrado con ID: " + roleId));
     }
-@Operation(summary = "Convertir a DTO", description = "Convierte un objeto User a UserDto")
-    private UserDto convertToDto(User user) {
-        UserDto dto = new UserDto();
-        dto.setId(user.getId());
-        dto.setName(user.getName());
-        dto.setDni(user.getDni());
-        dto.setUserType(user.getUserType());
-        dto.setAddress(user.getAddress());
-        dto.setPhoneNumber(user.getPhoneNumber());
-        dto.setSecondaryPhoneNumber(user.getSecondaryPhoneNumber());
-        dto.setEmail(user.getEmail());
-        dto.setCuit(user.getCuit());
 
-        // Obtener el roleId del UserRole asociado
-        Optional<UserRole> userRoleOpt = userRoleRepo.findRoleIdByUserId(user.getId());
-        userRoleOpt.ifPresent(userRole -> dto.setRoleId(userRole.getRole().getId()));
+    @Operation(summary = "Convertir a DTO", description = "Convierte un objeto User a UserDto")
+    private UserResponseDto convertToResponse(User user) {
 
-        return dto;
+        UserResponseDto response = new UserResponseDto();
+
+        response.setId(user.getId());
+        response.setName(user.getName());
+        response.setDni(user.getDni());
+        response.setAddress(user.getAddress());
+        response.setPhoneNumber(user.getPhoneNumber());
+        response.setSecondaryPhoneNumber(user.getSecondaryPhoneNumber());
+        response.setEmail(user.getEmail());
+
+        userRoleRepo.findByUserId(user.getId())
+                .ifPresent(userRole -> response.setRoleId(userRole.getRole().getId()));
+
+        return response;
     }
+
     @Operation(summary = "Obtener información del usuario actual", description = "Obtiene la información del usuario autenticado")
-    public UserDto getCurrentUserInfo() {
-        Authentication authentication = getAuthentication();
-        String email = getEmailFromAuthentication(authentication);
-        User user = getUserByEmail(email); // Usando tu método existente
-        return convertToDto(user); // Usando tu método existente
+    public UserResponseDto getCurrentUserInfo() {
+
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+
+        if (authentication == null) {
+            throw new UnauthorizedException("No authenticated user");
+        }
+
+        String email = authentication.getName();
+
+        User user = userRepo.findByEmail(email)
+                .orElseThrow(() -> new NoSuchElementException("User not found"));
+
+        return convertToResponse(user);
     }
+
     @Operation(summary = "Verificacion de Autenticación", description = "Verifica si el usuario está autenticado")
     private Authentication getAuthentication() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
@@ -220,6 +230,7 @@ private Role validateRole(UUID roleId) {
         }
         return authentication;
     }
+
     @Operation(summary = "Obtener el email del usuario autenticado", description = "Obtiene el email del usuario autenticado")
     private String getEmailFromAuthentication(Authentication authentication) {
         String email = authentication.getName();
